added images and first configs css in project

--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Cardap.io</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div class="container">
+      <div class="hero">
+        <!-- header -->
+        <div class="header">
+          <ul>
+            <li><a href="#">Entregador</a></li>
+            <li><a href="#">Restaurantes</a></li>
+            <li><a href="#">Trabalhe Conosco</a></li>
+            <li><a href="#">Entrar</a></li>
+          </ul>
+        </div>
+
+        <!-- bg -->
+        <div class="bg">
+          <div class="left">
+            <img src="" alt="Imagem de pratos" />
+            <img src="" alt="Imagem de pratos 2" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
