added logo, banner, background to project

--- a/index.html
+++ b/index.html
@@ -19,13 +19,46 @@
           </ul>
         </div>
 
-        <!-- bg -->
-        <div class="bg">
+        <!-- background -->
+        <div class="background">
           <div class="left">
-            <img src="" alt="Imagem de pratos" />
-            <img src="" alt="Imagem de pratos 2" />
+            <img src="images/dish-left.png" alt="" />
+          </div>
+          <div class="right">
+            <img class="svg" src="images/right.svg" alt="" />
+            <img src="images/dish-right.png" alt="" />
+          </div>
+          <div class="content">
+            <img class="logo" src="images/logo.svg" alt="" />
+            <h2>Nunca foi tão fácil pedir <span>lanche</span></h2>
+            <p>Descubra restaurantes perto de você</p>
+            <div class="form">
+              <div class="search">
+                <img src="images/search.svg" alt="" />
+                <input type="text" placeholder="Buscar endereço e número" />
+              </div>
+              <button>Buscar</button>
+            </div>
+            <div class="tags">
+              <span>#pizza</span>
+              <span>#lanches</span>
+              <span>#comidabrasileira</span>
+              <span>#hamburger</span>
+            </div>
           </div>
         </div>
+      </div>
+      <div class="banner">
+        <img src="images/landing-banner-1.png" alt="" />
+        <img src="images/landing-banner-2.png" alt="" />
+        <img src="images/landing-banner-3.png" alt="" />
+      </div>
+
+      <div class="footer">
+        <img src="images/logo.svg" alt="" />
+        <span
+          >Copyright 2024 - Cardap.io <br />Todos os direitos reservados</span
+        >
       </div>
     </div>
   </body>
