--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             <li><a href="#">Entrar</a></li>
           </ul>
         </div>
-
         <!-- background -->
         <div class="background">
           <div class="left">
             <img src="images/dish-left.png" alt="" />
+            <img class="burguer" src="images/burguer-left.png" alt="" />
           </div>
           <div class="right">
             <img class="svg" src="images/right.svg" alt="" />
@@ -48,6 +48,7 @@
           </div>
         </div>
       </div>
+
       <div class="banner">
         <img src="images/landing-banner-1.png" alt="" />
         <img src="images/landing-banner-2.png" alt="" />
